# [1.6.xx] - 2019-06-18

## New 

- added `progress` styles for exporting contacts

## Updated/fixes

- updated reset for `progress`
- added Sass variable for `meter` tag (space bar)


# [1.6.15] - 2019-06-07

## New 

- added `border-bottom--dashed` modifier
- added helper `underline`
- added `icon-w40p` size
- added cursor helper classes

## Updated/fixes

- exception for applying `pt0` to `pm-label`
- missing scroll in conversations on Design System website


# [1.6.14] - 2019-06-05

## Updated/fixes

- updated `hr` color
- updated `flex-items-end` helper and added example (renamed it, was `flex-item-end`, not consistent)
- fixed color of ProtonMail version text
- fixed navigation padding (added partial `exceptions` ONLY for Design System website)
- fixed logout expand on Design system website


# [1.6.13] - 2019-06-04

## New 

Logout dropdown

- added it :)
- added helpers `opacity-30`, `lh100`, `bordered` container
- commented some stuff (`q` styles)
- updated “How to use the Design system” (new partial)


## Updated/fixes

- updated drop downs (`max-height` limit, plus shadows/etc.)
- updated classnames for conversation lists (for `item-`, more generic, as it is used in contacts)
- fixed `viewbox` for some icons/simplified documentation
- renamed some classes for CSS multicolumns (consistency)
- renamed some Sass variables for better consistency
- added documentation about width helpers


# [1.6.12] - 2019-05-29

## New

- added `alignbaseline` helper class

## Updated/fixes

- fixed big screen adaptation

## Misc

- Add SVG illustrations


# [1.6.11] - 2019-05-28

## New

- added `--width-sidebar`, `--width-subnav` and `--body-fontsize` CSS variables
- added `pm-field--highlight` modifier
- added `meter` bars styles for settings
- POC screen adaptation for very large screens (to test)

## Updated/fixes

- added state class `is-disabled` for buttons
- increased tooltips width
- fix icon positionning in aside bar


# [1.6.10] - 2019-05-23

## New
