@@ -105,6 +105,9 @@
 .fill-black {
   fill: $black;
 }
+.fill-currentColor {
+  fill: currentColor;
+}
 
 
 
