@@ -59,6 +59,8 @@ section: design
   </div>
 {% endfor %}
 
+<p>Note: if you need the current color of the text for filling a SVG, you may use <code>fill-currentColor</code>.</p>
+
 </div>
 
 <h2>Color rules </h2>
