@@ -151,10 +151,10 @@ subsection: icons
   <div class="flex flex-spacebetween mb2 onmobile-flex-column">
     <div class="w49 ">
       <ul class="unstyled m0 list-2columns ontablet-list-1column">
-        {% assign listColors = "global-grey#global-altgrey#global-light#global-border#global-muted#global-success#global-warning#global-attention#pm-blue#pm-blue-dark#pm-blue-light#pv-green#pv-green-light#pv-green-dark#white" | split: '#' %}
+        {% assign listColors = "global-grey#global-altgrey#global-light#global-border#global-muted#global-success#global-warning#global-attention#pm-blue#pm-blue-dark#pm-blue-light#pv-green#pv-green-light#pv-green-dark#white#currentColor" | split: '#' %}
 
         {% for color in listColors %}
-          {% if color == 'global-light' or color == 'global-border' or color == 'global-muted' or color == 'global-attention' or color == 'white'  %}
+          {% if color == 'global-light' or color == 'global-border' or color == 'global-muted' or color == 'global-attention' or color == 'white' or color == 'currentColor'  %}
             {% assign colorText = 'global-grey' %}
           {% else %}
             {% assign colorText = 'global-light' %}
@@ -182,6 +182,8 @@ subsection: icons
     </div>
 
   </div>
+
+  <p>Note: <code>fill-currentColor</code> will fill the SVG using the <code>currentColor</code> value (the color of the text). Useful to get the icon the same color of the text, in a link for example.</p>
 
 
 
