@@ -3,6 +3,7 @@
 ## New 
 
 - added `progress` styles for exporting contacts
+- added `fill-currentColor` class for SVG
 
 ## Updated/fixes
 
